# multi_arm_coord_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
src/mk1000_dual_franka_franka_hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mk1000_dual_franka_franka_hand_moveit_config/config/: arm.xacro  dual_fr3.srdf.xacro  fake_controllers.yaml  gazebo_mr1000.urdf  gazebo_robot.urdf  hand.xacro  kinematics.yaml  mr1000.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/mk1000_dual_franka_franka_hand_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  franka_control.launch  frankd_driver.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  moveit_rviz_common.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  realMove_exec.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  (+1 more)
src/mr1000_dual_fr3_description/: CMakeLists.txt  package.xml
src/mr1000_dual_fr3_description/launch/: display.launch
src/mr1000_dual_fr3_description/meshes/: camera_bracket.STL
src/mr1000_dual_fr3_description/urdf/: camera_bracket.xacro  dual_fr3.urdf.xacro  dual_fr3_moveit.urdf.xacro  laser.xacro  mid360.xacro  mr1000_macro.xacro  robot.urdf.xacro
src/mr1000_fr3_description/: CMakeLists.txt  package.xml  urdf.rviz
src/mr1000_fr3_description/launch/: display.launch  gazebo.launch
src/mr1000_fr3_description/meshes/: laser.STL  mid360.STL  wheel_LB_link.STL  wheel_LF_link.STL  wheel_RB_link.STL  wheel_RF_link.STL
src/mr1000_fr3_description/urdf/: camera_bracket.xacro  laser.xacro  mid360.xacro  mr1000_macro.xacro  robot.urdf.xacro
(+758 files in other folders)
