<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr1000_dual_fr3_description</name>
  <version>0.0.0</version>
  <description>mr1000_dual_fr3_description</description>
  <maintainer email="1579906368@qq.com">zzp</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>franka_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>