<package format="2">
  <name>mr1000_fr3_description</name>
  <version>0.0.0</version>
  <description>mr1000_fr3_description</description>
  <maintainer email="xuhan@robotplusplus.com.cn">xuhan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
